fixed failing obsoleteReleases test